--- a/ScamDetective/core/templates/core/index.html
+++ b/ScamDetective/core/templates/core/index.html
@@ -282,8 +282,8 @@
 <p style="font-size: 5px; font-family: Times New Roman;"> Andrew Barber, Elijah Paul Castaneda, Scott Jeppson, USU, Sandbox - Hackathon, Spring 2025. </p>
 
 <div class="navbar a">
-  <a href="Input.html"> Scam Detector </a>
-  <a href="Output.html"> See Results </a>
+  <a href="/input"> Scam Detector </a>
+  <a href="/output"> See Results </a>
 </div>
 
 </body>
