Fixed main menu link on output page

--- a/ScamDetective/core/templates/core/Output.html
+++ b/ScamDetective/core/templates/core/Output.html
@@ -247,7 +247,7 @@
 <p style= "font-size: 5px; font-family: Times New Roman;"> Andrew Barber, Elijah Paul Castaneda, Scott Jeppson, USU, Sandbox - Hackathon, Spring 2025. </p>
 
 <div class="navbar">
-  <a href=""> Main Menu </a>
+  <a href="/"> Main Menu </a>
   <!-- <a href="MeetTheMonsters.html"> Meet the Monsters! </a> -->
 </div>
 
