--- a/ScamDetective/core/templates/core/Output.html
+++ b/ScamDetective/core/templates/core/Output.html
@@ -21,7 +21,7 @@
 
 <p class="double"></p>
 
-<div class="container">
+<div class="container" align="center">
 <iframe src="https://whateverscottputshere" title="Scam Detective Results"></iframe>
 </div>
 
@@ -31,7 +31,7 @@
 
 <div class="navbar">
   <a href="index.htm"> Main Menu </a>
-  <a href="MeetTheMonsters.html"> Meet the Monsters! </a>
+  <a href="Input.html"> Scam Detector </a>
 </div>
 
 </body>
