--- a/ScamDetective/core/templates/core/Output.html
+++ b/ScamDetective/core/templates/core/Output.html
@@ -238,7 +238,7 @@
 
 <p class="double"></p>
 
-<div class="container">
+<div class="container" align="center">
 <iframe src="https://whateverscottputshere" title="Scam Detective Results"></iframe>
 </div>
 
@@ -248,7 +248,7 @@
 
 <div class="navbar">
   <a href="/"> Main Menu </a>
-  <!-- <a href="MeetTheMonsters.html"> Meet the Monsters! </a> -->
+  <a href="/input"> Scam Detector </a>
 </div>
 
 </body>
