--- a/ScamDetective/core/templates/core/index.html
+++ b/ScamDetective/core/templates/core/index.html
@@ -5,6 +5,7 @@
   <title>Scam Detective</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static 'index.css' %}">
   <style>
     body {background-color: #056839;}
     h2 {color: white; text-align: center;}
