Fixed styling issue

--- a/ScamDetective/core/templates/core/Input.html
+++ b/ScamDetective/core/templates/core/Input.html
@@ -99,7 +99,7 @@
     <label for="subject" style="color: white;">Message Content</label>
     <textarea id="subject" name="message" placeholder="Content of the message you recieved (copy + paste).." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    <input style="padding: 12px 20px;" type="submit" value="Submit">
   </form>
 </div>
 
