Removed secret url

--- a/ScamDetective/core/templates/core/index.html
+++ b/ScamDetective/core/templates/core/index.html
@@ -44,7 +44,7 @@
   </div>
   
   <div class="column">
-    <h2><a href="/secretPage">Scott Jeppson</a></h2>
+    <h2>Scott Jeppson</h2>
     <p>Scott Jeppson is a Computer Science (CS) major at USU. His role in the Scam Detective Team was to organize a GitHub repository, develop code for the inner workings of Scam Detective, and complete the brunt work of the coding.</p>
    <figure>
   <img src="{% static 'Scott Jeppson.jpg' %}" alt="A picture of Scott Jeppson" width="300" height="300" class="center" style="width:85%;">
